--- a/index.html
+++ b/index.html
@@ -46,13 +46,17 @@
 </head>
 <body>
   <div class="card">
-    <div class="qrcode">
-      <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://peng0513.github.io/business-card/" alt="QR Code">
+    <div class="qr">
+      <img src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://your-domain.com/your-card.html" alt="QR Code">
+      <p>掃描 QR Code 查看此名片</p>
     </div>
-    <div class="name">鍾玉泙</div>
-    <div class="service">BIM service</div>
-    <div class="contact">?? 0986372263</div>
-    <div class="contact">LINE ID：0986372263</div>
+    <h1>鍾玉泙</h1>
+    <h2>BIM 導入顧問</h2>
+    <div class="info">
+      <p><img src="https://img.icons8.com/ios/50/000000/email-open.png" alt="Email Icon"> Email：<a href="mailto:as0986372263@gmail.com">as0986372263@gmail.com</a></p>
+      <p><img src="https://img.icons8.com/ios/50/000000/phone.png" alt="Phone Icon"> 手機：0986372263</p>
+      <p><img src="https://img.icons8.com/ios/50/000000/chat.png" alt="Chat Icon"> LINE：<a href="https://line.me/ti/p/~0986372263" target="_blank">0986372263</a></p>
+    </div>
   </div>
 </body>
 </html>
