--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
       font-size: 16px;
       margin: 6px 0;
     }
+    .contact img {
+      width: 16px;  /* 圖示縮小約 1.5 倍 */
+      height: 16px;
+      vertical-align: middle;
+      margin-right: 6px;
+    }
   </style>
 </head>
 <body>
@@ -53,9 +59,9 @@
     <h1>鍾玉泙</h1>
     <h2>BIM 導入顧問</h2>
     <div class="info">
-      <p><img src="https://img.icons8.com/ios/50/000000/email-open.png" alt="Email Icon"> Email：<a href="mailto:as0986372263@gmail.com">as0986372263@gmail.com</a></p>
-      <p><img src="https://img.icons8.com/ios/50/000000/phone.png" alt="Phone Icon"> 手機：0986372263</p>
-      <p><img src="https://img.icons8.com/ios/50/000000/chat.png" alt="Chat Icon"> LINE：<a href="https://line.me/ti/p/~0986372263" target="_blank">0986372263</a></p>
+      <p class="contact"><img src="https://img.icons8.com/ios/50/000000/email-open.png" alt="Email Icon">Email：<a href="mailto:as0986372263@gmail.com">as0986372263@gmail.com</a></p>
+      <p class="contact"><img src="https://img.icons8.com/ios/50/000000/phone.png" alt="Phone Icon">手機：0986372263</p>
+      <p class="contact"><img src="https://img.icons8.com/ios/50/000000/chat.png" alt="Chat Icon">LINE：<a href="https://line.me/ti/p/~0986372263" target="_blank">0986372263</a></p>
     </div>
   </div>
 </body>
